--- a/index.html
+++ b/index.html
@@ -1,16 +1,55 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="UniAxis - Principal Full Stack Engineer with 15+ years of experience in .NET, React, TypeScript, and LTI integrations." />
-    <meta name="keywords" content="Full Stack Engineer, .NET, React, TypeScript, LTI, Canvas, Blackboard, Microservices, Kubernetes" />
-    <meta name="author" content="UniAxis" />
-    <title>UniAxis - Principal Full Stack Engineer</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>UniAxis - Coming Soon</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background: linear-gradient(135deg, #1e293b, #1e40af, #1e293b);
+            color: white;
+            margin: 0;
+            padding: 0;
+            min-height: 100vh;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            text-align: center;
+        }
+        .container {
+            max-width: 600px;
+            padding: 2rem;
+        }
+        h1 {
+            font-size: 3rem;
+            margin-bottom: 1rem;
+            background: linear-gradient(45deg, #60a5fa, #22d3ee);
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+        }
+        p {
+            font-size: 1.2rem;
+            margin-bottom: 2rem;
+            opacity: 0.9;
+        }
+        .status {
+            background: rgba(255,255,255,0.1);
+            padding: 1rem;
+            border-radius: 10px;
+            margin-top: 2rem;
+        }
+    </style>
+</head>
+<body>
+    <div class="container">
+        <h1>UniAxis</h1>
+        <p>Principal Full Stack Engineer</p>
+        <p>15+ years of expertise in modern web development, microservices architecture, and LTI integrations</p>
+        <div class="status">
+            <p><strong>🚀 Site Status:</strong> GitHub Pages is now active!</p>
+            <p>React application deployment in progress...</p>
+        </div>
+    </div>
+</body>
 </html>
