--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="alternate icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="UniAxis - Principal Full Stack Engineer with 15+ years of experience in .NET, React, TypeScript, and LTI integrations." />
     <meta name="keywords" content="Full Stack Engineer, .NET, React, TypeScript, LTI, Canvas, Blackboard, Microservices, Kubernetes" />
