Fix favicon to use UniAxis logo instead of Vite default

--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     
     <!-- SEO Meta Tags -->
@@ -44,7 +45,7 @@
       "@type": "Organization",
       "name": "UniAxis",
       "url": "https://uniaxis.com.au",
-      "logo": "https://uniaxis.com.au/logo.png",
+      "logo": "https://uniaxis.com.au/logo.svg",
       "description": "Technology consulting company specializing in complex software solutions for enterprise and educational organizations.",
       "address": {
         "@type": "PostalAddress",
