Remove UniAxis from page title to avoid repetition with domain name

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <link rel="icon" sizes="192x192" href="/favicon-192x192.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     
-    <!-- SEO Meta Tags - Clean title without domain repetition -->
-    <title>UniAxis - Technology Solutions & Consulting | Full Stack Development</title>
-    <meta name="description" content="Delivering modern web development, LTI integrations, and enterprise software solutions. Specializing in .NET, React, microservices, and educational technology." />
+    <!-- SEO Meta Tags - Removed UniAxis from title to avoid repetition with domain -->
+    <title>Technology Solutions & Consulting | Full Stack Development</title>
+    <meta name="description" content="UniAxis delivers modern web development, LTI integrations, and enterprise software solutions. Specializing in .NET, React, microservices, and educational technology." />
     <meta name="keywords" content="web development, full stack development, LTI integrations, microservices, enterprise software, educational technology, .NET, React, Angular, TypeScript, OAuth, Kubernetes, Canvas, Blackboard, university systems" />
     <meta name="author" content="UniAxis" />
     <meta name="robots" content="index, follow" />
